=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Force UTF8 encoding in file reading collector to avoid JVM's default encoding settings

 - Fix: Fixed global count using non-existing column in the where clause

 - Fix: removed unsupported syntax from ``Update`` synposis

2015/01/19 0.45.7
=================

 - SELECT statements that involved tables from the information_schema schema or
   from the sys schema could fail if they contained columns in the ORDER BY
   clause but didn't contain these columns in the result column list.

 - Fix: Return zero row count instead of an exception if update by id
   doesn't match any document

 - Fixed an issue in the ``sys.shards`` table which caused an
   exception when the select limit was lower then the number of
   matching shards on a node.

 - Fixed type conversion of bulk parameters

 - Fixed an issue that could cause bulk inserts to get stalled.

 - Updated crate-admin to version 0.11.2 which includes following changes:

    - removed usage of sys expressions in wrong context

    - fixed a template rendering issue in cluster view in Safari

    - de-register watches to decrease DOM updates and improve performance in cluster view

    - fixed title of `tables` view if no tables exists or connection is down

 - Fix: throw correct exception if `_version` is misused in WHERE clause

 - improved speed of Alter table settings in partitioned tables

 - Restricted allowed characters in column names

2014/12/16 0.45.6
=================

 - Fix: Improve Error messages on COPY TO and COPY FROM

 - Fix: correctly plan group by queries using HAVING clause

 - Fix: Added comments to the logging.yml config file and reduced the
   amount of log entries by changing the loglevel of some log messages

 - Fix: Using CLUSTERED BY Column in PARTITIONED BY clause threw
   misleading exception

 - Fix: Inserting arrays with a null value at first position
   failed
