@@ -9,6 +9,8 @@ Unreleased
 
  - Fix: Fixed global count using non-existing column in the where clause
 
+ - Fix: Bulk inserts with mixed but compatible types (e.g. int and long) failed
+
  - Fix: removed unsupported syntax from ``Update`` synposis
 
 2015/01/19 0.45.7
